cp4ba-21-0-3/scripts/deployment-ads-ml-service/adsMlServiceDeployment.template.yaml
###############################################################################
#
# Licensed Materials - Property of IBM
#
# (C) Copyright IBM Corp. 2022. All Rights Reserved.
#
# US Government Users Restricted Rights - Use, duplication or
# disclosure restricted by GSA ADP Schedule Contract with IBM Corp.
#
###############################################################################
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ads-ml-service-deployment
  labels:
    app: open-prediction
spec:
  replicas: adsMlServiceReplicaCount
  selector:
    matchLabels:
      app: open-prediction
  template:
    metadata:
      labels:
        app: open-prediction
    spec:
      volumes:
        - name: model-conf
          configMap:
            name: ads-ml-service-model-conf
            defaultMode: 420
      containers:
        - name: open-prediction
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: model-conf
              mountPath: /usr/src/ads-ml-service/preload-conf.yaml
              subPath: preload-conf.yaml
          terminationMessagePolicy: File
          image: >-
            image-registry.openshift-image-registry.svc:5000/adsMlServiceProjectName/ads-ml-service:latest
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
