cp4ba-21-0-3/scripts/deployment-ads-ml-service/service.yaml
###############################################################################
#
# Licensed Materials - Property of IBM
#
# (C) Copyright IBM Corp. 2022. All Rights Reserved.
#
# US Government Users Restricted Rights - Use, duplication or
# disclosure restricted by GSA ADP Schedule Contract with IBM Corp.
#
###############################################################################
apiVersion: v1
kind: Service
metadata:
  name: ads-ml-service-service
  labels:
    app: open-prediction
spec:
  type: NodePort
  selector:
    app: open-prediction
  ports:
    - name: open-prediction-service-backend
      protocol: TCP
      port: 8080                         # Port that the ops actually expose. By default targetPort := port
      targetPort: 8080
      nodePort: 30000                    # External port of cluster
